Admin form visibility fixed

--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@
     align-content: center;
     justify-content: center;
 }
+
+#adminForm {
+    display: none;
+}
